Prevent Table from Being Too Narrow

--- a/client/app/styles/layout/_app.scss
+++ b/client/app/styles/layout/_app.scss
@@ -32,7 +32,7 @@
 
    /* Prevents table Aspect Ratio from being too wide on wider screens. */
    @include xl {
-        margin-left: 25vw;
-        margin-right: 25vw;
+        margin-left: 28vw;
+        margin-right: 28vw;
     }
 }
